      content and readability of the former. Formatted NEWS as Release Notes
      complete with a Table of Conents, one heading per release. Moved the
      Developer Guide into the main document catalog and provided a link
      from the developer document catalog back to the main one.
      (Ian Clatworthy, Sabin Iacob, Alexander Belchenko)


  API CHANGES:

    * The static convenience method ``BzrDir.create_repository``
      is deprecated.  Callers should instead create a ``BzrDir`` instance
      and call ``create_repository`` on that.  (Martin Pool)


bzr 0.90rc1 2007-08-14
======================

  BUGFIXES:

    * ``bzr init`` should connect to the remote location one time only.  We
      have been connecting several times because we forget to pass around the
      Transport object. This modifies ``BzrDir.create_branch_convenience``,
      so that we can give it the Transport we already have.
      (John Arbash Meinel, Vincent Ladeuil, #111702)

    * Get rid of sftp connection cache (get rid of the FTP one too).
      (Vincent Ladeuil, #43731)

    * bzr branch {local|remote} remote don't try to create a working tree
      anymore.
      (Vincent Ladeuil, #112173)

    * All identified multiple connections for a single bzr command have been
      fixed. See bzrlib/tests/commands directory.
      (Vincent Ladeuil)

    * ``bzr rm`` now does not insist on ``--force`` to delete files that
      have been renamed but not otherwise modified.  (Marius Kruger,
      #111664)

    * ``bzr selftest --bench`` no longer emits deprecation warnings
      (Lukáš Lalinský)

    * ``bzr status`` now honours FILE parameters for conflict lists
      (Aaron Bentley, #127606)

    * ``bzr checkout`` now honours -r when reconstituting a working tree.
      It also honours -r 0.  (Aaron Bentley, #127708)

    * ``bzr add *`` no more fails on Windows if working tree contains
      non-ascii file names. (Kuno Meyer, #127361)
