@@ -302,6 +302,12 @@ bzr 0.90 2007-08-28
       from the developer document catalog back to the main one.
       (Ian Clatworthy, Sabin Iacob, Alexander Belchenko)
 
+  BUGFIXES:
+
+    * Fix ''bzr info bzr://host/'' and other operations on ''bzr://' URLs with
+      an implicit port.  We were incorrectly raising PathNotChild due to
+      inconsistent treatment of the ''_port'' attribute on the Transport object.
+      (Andrew Bennetts, #133965)
 
   API CHANGES:
 
